fix: adjust spacings of summary table items

--- a/src/Admin/components/SummaryTable/styles.module.scss
+++ b/src/Admin/components/SummaryTable/styles.module.scss
@@ -3,7 +3,6 @@ $breakpoint-desktop: 900px;
 .summaryTableContainer {
   display: flex;
   flex-direction: column;
-  gap: var(--givewp-spacing-2);
   width: 100%;
 }
 
@@ -20,13 +19,16 @@ $breakpoint-desktop: 900px;
   }
 }
 
+.summaryTable {
+    padding: var(--givewp-spacing-4) 0;
+}
+
 .summaryTableLabel {
   flex-grow: 1;
   font-size: 1rem;
   font-weight: 500;
   line-height: 1.5;
   color: #4b5563;
-  padding: var(--givewp-spacing-3) 0;
   margin: 0;
 }
 
@@ -35,7 +37,6 @@ $breakpoint-desktop: 900px;
   font-weight: 600;
   line-height: 1.5;
   color: #1f2937;
-  padding: var(--givewp-spacing-3) 0;
   text-align: right;
 }
 
