--- a/src/Donors/resources/admin/components/DonorDetailsPage/Tabs/Overview/DonorSummary/styles.module.scss
+++ b/src/Donors/resources/admin/components/DonorDetailsPage/Tabs/Overview/DonorSummary/styles.module.scss
@@ -3,7 +3,6 @@
     flex-direction: column;
     gap: var(--givewp-spacing-1);
     margin: 0;
-    padding: var(--givewp-spacing-5) 0 var(--givewp-spacing-3) 0;
 
     p {
         margin: 0;
@@ -30,7 +29,6 @@
     font-weight: 600;
     line-height: 1.5;
     color: #1f2937;
-    padding: var(--givewp-spacing-3) 0;
 
     &.pill {
         background-color: #f9fafb;
